finished layout for CauliflowerTacos.html / barriaBeef.html

--- a/BirriaBeef.html
+++ b/BirriaBeef.html
@@ -5,11 +5,144 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Al Pastor Cooking Guide</title>
     <link rel="stylesheet" href="cooking.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-fixed bg-cover bg-center" style="background-image: url(./assets/images/BirriaBeefBackground.jpg)">
+  <body class="birria-bg relative">
+    <header
+    id="logoBackgroundSmall"
+    class="bg-gradient-to-r from-transparent to-white flex-shrink text-center uppercase"
+  >
+    <button
+      id="menuButton"
+      class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+    >
+      Menu
+    </button>
+    <img
+      id="logoSmall"
+      src="./assets/logo/YesChefLogoBlack.svg"
+      alt="Yes, Chef Logo"
+      class="relative ml-auto mr-4"
+    />Let's Start Cooking Birria Beef!
+  </header>
+  <div id="menuContainer"></div>
+<br/>
+  <main>
+    <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
+      <h2>Prepare the Chuck Roast:</h2>
+      <article class="indent-5">
+        <p>
+          1. Cut the Chuck Roast into 4" cubes, pat dry, and lightly coat in Olive Oil
+        </p>
+        <br />
+        <p>
+          2. Season the Chuck Roast with Salt and Pepper
+        </p>
+        <br />
+        <p>
+          3. Heat Olive Oil in a Large Dutch Oven, and sear all sides of the seasoned Chuck Roast on 
+          medium-high heat <button
+          type="button"
+          class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
+        >
+          *Chef note
+        </button>
+        easiest if you sear the Chuck Roast in 2 separate batches
+        </p>
+        <br />
+        <p>
+          4. Remove the Dutch Oven from the heat keeping the browned meat remnants in the bowl, and set the Chuck Roast aside in a bowl
+        </p>
+      </article>
+    </section>
+    <br />
+    <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
+      <h3>Prepare the Marinade:</h3>
+      <article class="indent-5">
+        <p>
+          1. Rinse, stem, and seed the Guajillo, Ancho, and Árbol chiles, and add them to a medium-sized pot <button
+          type="button"
+          class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
+        >
+          *Chef note
+        </button>
+        do this with gloves on, and do not touch your face or eyes during this step. Discard gloves after this step.
+        </p>
+        <br />
+        <p>
+          2. Slice the Roma Tomatoes in half, remove the stems, and add them to the pot
+        </p>
+        <br />
+         <p> 3. Peel and slice the Yellow Onion into 1/2" slivers, then add to the pot
+         </p>
+         <br>
+         <p>
+          4. Add the Mexican Cinnamon Sticks, Bay Leaves, and Peppercorns to the pot
+         </p>
+         <br />
+         <p>
+          5. Cover the ingredients with water and bring to a boil over high heat
+         </p>
+         <br />
+         <p>
+          6. Reduce the heat to low, cover, and let the pot simmer for 10min
+         </p>
+         <br />
+         <p>
+           7. fter 10min, using a slotted spoon, transfer the ingredients to a blender or food processor (SAVE THE WATER!) <button
+          type="button"
+          class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
+        >
+          *Chef note
+        </button>
+          easiest to do in multiple batches depending on blender or food processor size
+         </p>
+         <br />
+         <p> 
+          8. Add 1 cup of the chili water, the Beef Broth, White Vinegar, Garlic, Cumin, Oregano, 
+          and Ground Cloves to the blender or food processor, and blend until very smooth
+         </p>
+         <br />
+         <p>
+          9. Using a fine-mesh strainer, strain the blended sauce into the Dutch Oven, discard any solids from the sauce
+         </p>
+      </article>
+    </section>
+    <br />
+    <section section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
+      <h4>Cooking the chuck roast:</h4>
+      <article class="indent-5">
+        <p>
+          1.Take the Dutch Oven with the marinade and add the Chuck Roast back in
+          </p>
+          <br/>
+          <p>
+           2.Bring the Chuck Roast and marinade to a boil over high heat
+          </p>
+          <br />
+          <p>
+           3. Reduce to low heat, cover, and cook for 3-3 1/2 hours until the Chuck Roast is fall-apart tender
+          </p>
+          <br />
+          <p>
+            4. Remove the Chuck Roast, shred, and return to the Dutch Oven
+          </p>
+        </article>
+    </section>
+    <br />
+    <section section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
+      <p>
+        Serve as a stew with cilantro and white onions, or in tacos, burritos, etc. <button
+        type="button"
+        class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
+      >
+        *Chef note
+      </button>
+      For INCREDIBLE fusion, make ramen with the Birria stew and serve with the shredded Birria Chuck Roast and cilantro/onions....
+      </p>
+    </section>
 
-
-    <script src="cooking.js"></script>
+    
   </body>
 </html>
