--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -3,13 +3,152 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Al Pastor Cooking Guide</title>
+    <title>Cauliflower Tacos Cooking Guide</title>
     <link rel="stylesheet" href="cooking.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-fixed bg-cover bg-center" style="background-image: url(./assets/images/CauliflowerTacosBackground.jpg)">
 
+  <body class="cauliflower-bg relative">
+   <header 
+   id="logoBackgroundSmall"
+   class="bg-gradient-to-r from-transparent to-white flex-shrink text-center uppercase"
+ >
+   <button
+     id="menuButton"
+     class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+   >
+     Menu
+   </button>
+   <img
+        id="logoSmall"
+        src="./assets/logo/YesChefLogoBlack.svg"
+        alt="Yes, Chef Logo"
+        class="relative ml-auto mr-4"
+      />Let's Start Cooking Cauliflower Taco's
+    </header>
+    <div id="menuContainer"></div>
+    <br/>
+    <main>
+      <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
+        <h2> Cook the Cauliflower</h2>
+        <article class="indent-5">
+          <p>
+            1. reheat oven to 400 degrees with one rack in the middle position, and one in the bottom position
+          </p>  
+          <br />
+          <p>
+            2. Rinse the Cauliflower and cut into bite-sized florets
+          </p>
+          <br />
+          <p>
+            3. Toss Cauliflower in a large bowl with the Cumin, Ancho Chili Powder, Paprika, and Salt.
+          </p>
+          <br />
+          <p>
+            4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min <button
+            type="button"
+            class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
+          >
+            *Chef note
+          </button>
+          check Cauliflower at 20min, if it is not golden brown and tender, roast for another 5min
+          </p>
+          <br />
+          <p>
+            5. Remove from the Oven, prepare the tacos, and serve as fresh as possible <button
+            type="button"
+            class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
+          >
+            *Chef note
+          </button>
+          Prepare the taco components before the Cauliflower is done roasting so you can build the tacos and serve immediately
+          </p>
+        </article>
+        </section>
+        <br />
+        <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
+          <h3>Make the Chipotle Sauce:</h3>
+          <article class="indent-5">
+            <p>
+              1. On another lined baking sheet, add the 1/4 cup of Raw Almonds and 4 Garlic Cloves with skin.n
+            </p>  
+            <br />
+            <p>
+              2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min <button
+              type="button"
+              class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
+            >
+              *Chef note
+            </button>
+            Check at 8min to see if the Almonds are dark and starting to split; if not continue roasting for 2-4 more minutes - do not let the Almonds burn
+            </p>
+            <br />
+            <p>
+              3. When the Almonds and Garlic Cloves with Skin are done roasting, remove them from the oven and set aside
+            </p>
+            <br />
+            <p>
+              4. Drain the can of Fire-Roasted Tomatoes and add to a blender or food processor along with the roasted Almonds, 
+              roasted Garlic Cloves (remove skin), raw Garlic Cloves, Avocado Oil, the juice from the Lime, Paprika, Cumin, Salt, Honey, 
+              and 1 can of Chipotle Peppers in Adobo sauce
+            </p>
+            <br />
+            <p>
+              5. Blend on high until very smooth
+            </p>
+            <br />
+            <p>
+              6. Chef's unpopular extra step: Put the sauce in the refrigerator so it is cool with put on top of the fresh roasted Cauliflower 
+              when the tacos are assembled - it lightly melts the sauce and brings out great flavors while introducing a temperature dynamic to 
+              hese tacos that have an incredible textual dynamic
+            </p>
+          </article>
+          </section>
+          <br />
+          <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
+            <h4> Prepare the taco components:</h4>
+            <article class="indent-5">
+              <p>
+                1. Slice the Lime to serve wedges alongside the Tacos.
+              </p>
+              <br />
+              <p>
+                2. Half, deseed, skin and thinly slice the Avocado.
+              </p>
+              <br />
+              <p>
+                3. Rinse and very thinly slice the Red Cabbage <button
+                type="button"
+                class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
+              >
+                *Chef note
+              </button>
+              Also very good if it is cold from the refrigerator at time of plating
+              </p>
+              <br />
+              <p>
+                4. Rinse and dice the Cilantro
+              </p>
+              <br />
+              <p>
+                5. Heat the Tortillas in a pan on the stove
+              </p>
+              <br />
+            </article>
+          </section>
+          <br />
+          <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
+            <h5>Plating the Tacos:</h5>
+            <article class="indent-5">
+              <p>
+                Put the Cauliflower in a tortilla with a generous portion of the Chipotle Sauce. 
+                Sprinkle some Red Cabbage and Cilantro on top. The Avocado can be served in the taco or on the side. Serve with a Lime Wedge. Enjoy!
+              </p>
+            </article>
+          </section>
+    </main>
 
-    <script src="cooking.js"></script>
+    
   </body>
 </html>
