--- a/CarneAsada.html
+++ b/CarneAsada.html
@@ -8,6 +8,24 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-fixed bg-cover bg-center" style="background-image: url(./assets/images/CarneAsadaBackground.jpg)">
+    <header 
+      id="logoBackgroundSmall"
+      class="bg-gradient-to-r from-transparent to-white flex-shrink text-center uppercase"
+    >
+      <button
+        id="menuButton"
+        class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+      >
+        Menu
+      </button>
+      <img
+        id="logoSmall"
+        src="./assets/logo/YesChefLogoBlack.svg"
+        alt="Yes, Chef Logo"
+        class="relative ml-auto mr-4"
+      />Let's Start Cooking Carne Asada!
+    </header>
+    <br />
 
 
     <script src="cooking.js"></script>
