--- a/menu.html
+++ b/menu.html
@@ -2,30 +2,30 @@
   id="menu"
   class="fixed top-0 left-0 h-full w-80 bg-white text-gray-900 transform -translate-x-full transition-transform z-10 flex flex-col"
 >
-  <ul class="flex-grow p-2 text-3xl font-medium">
-    <li class="block pl-2 pb-4">Select a Recipe...</li>
+  <ul class="flex-grow p-2 text-3xl">
+    <li class="block pl-3 pt-4 text-gray-500 text-lg">Select a Recipe...</li>
     <li>
-      <a href="./recipe-ChipotleChicken.html" class="block p-2"
+      <a href="./recipe-ChipotleChicken.html" class="block p-3"
         >Adobo Chicken</a
       >
     </li>
     <li>
-      <a href="./recipe-AlPastor.html" class="block p-2">Al Pastor Pork</a>
+      <a href="./recipe-AlPastor.html" class="block p-3">Al Pastor Pork</a>
     </li>
     <li>
-      <a href="./recipe-BirriaBeef.html" class="block p-2">Birria Beef</a>
+      <a href="./recipe-BirriaBeef.html" class="block p-3">Birria Beef</a>
     </li>
     <li>
-      <a href="./recipe-CarneAsada.html" class="block p-2">Carne Asada</a>
+      <a href="./recipe-CarneAsada.html" class="block p-3">Carne Asada</a>
     </li>
     <li>
-      <a href="./recipe-CauliflowerTacos.html" class="block p-2"
+      <a href="./recipe-CauliflowerTacos.html" class="block p-3"
         >Cauliflower Tacos</a
       >
     </li>
   </ul>
   <footer
-    class="flex-shrink-0 mt-auto flex justify-center items-center p-4 text-xl text-gray-700 font-normal"
+    class="flex-shrink-0 mt-auto flex justify-center items-center p-4 text-xl text-gray-500 font-normal"
   >
     <a href="./index.html" class="p-4">Home</a>
     <p class="pt-4 pb-4">|</p>
