--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       >
         Menu
       </button>
-      <!-- TODO: Add light/dark mode toggle on top right -->
     </header>
     <div id="menuContainer"></div>
     <main>
@@ -40,5 +39,13 @@
         />
       </div>
     </main>
+    <footer>
+      <button
+        id="themeButton"
+        class="absolute bottom-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+      >
+        ◐ Theme
+      </button>
+    </footer>
   </body>
 </html>
