--- a/recipe-ChipotleChicken.html
+++ b/recipe-ChipotleChicken.html
@@ -15,6 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
     />
     <script defer src="./assets/js/homepage.js"></script>
+    <script defer src="assets\js\recipe.js"></script>
   </head>
   <body class="chicken-bg relative">
     <header
@@ -48,7 +49,7 @@
         <h2>Ingredients:</h2>
         <ul>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="mr-2 checkItem" />
             3lbs Boneless, Skinless Chicken Thighs
           </li>
           <li class="flex items-center">
@@ -93,21 +94,12 @@
           <button data-close-button class="close-button">&times;</button>
         </div>
         <div class="modal-body">
-          List of items<br>
-          List of items<br>
-          List of items<br>
-          List of items<br>
-          List of items<br>
-          List of items<br>
-          List of items<br>
-          List of items<br>
-          List of items<br>
-          List of items<br>
-          List of items<br>
-          List of items<br>
+          <p class="error">
+            Please select ingredients to add to your shopping list
+          </p>
         </div>
       </div>
-      <div id="overlay"></div>
+      <div id="overlayModal"></div>
         <a
           href="./ChipotleChicken.html"
           class="m-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded"
@@ -124,6 +116,6 @@
 
 
     </main>
-    <script src="assets\js\recipe.js"></script>
+   
   </body>
 </html>
