updated chef note to hover content shown on every cooking HTML

--- a/AlPastor.html
+++ b/AlPastor.html
@@ -71,13 +71,8 @@
       <br> 
         <p>
           6.Pour the contents of the blender through a fine-mesh strainer into a large bowl. 
-          Push the blended marinade through the strainer until no liquid remains. Discard the solids <button
-          type="button"
-          class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-        >
-          *Chef note
+          Push the blended marinade through the strainer until no liquid remains. Discard the solids <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['You_can_also_keep_the_solids_to_make_an_incredible_salsa...']">
         </button>
-        You can also keep the solids to make an incredible salsa...
         </p>
       <br> 
         <p>
@@ -92,13 +87,8 @@
       <h4>Cooking the Pork</h4>
       <article class="indent-5">
         <p>
-          1.Preheat your bbq grill to as hot as possible. <button
-          type="button"
-          class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-        >
-          *Chef note
+          1.Preheat your bbq grill to as hot as possible. <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['A_little_char_of_the_marinade_on_the_pork_brings_out_incredible_flavors']">
         </button>
-          A little char of the marinade on the pork brings out incredible flavors
         </p>
     <br> 
         <p>
