--- a/BirriaBeef.html
+++ b/BirriaBeef.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Al Pastor Cooking Guide</title>
+    <title>Birria Beef Cooking Guide</title>
     <link rel="stylesheet" href="cooking.css"/>
     <link rel="stylesheet" href="./assets/css/style.css"/>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -42,13 +42,8 @@
         <br />
         <p>
           3. Heat Olive Oil in a Large Dutch Oven, and sear all sides of the seasoned Chuck Roast on 
-          medium-high heat <button
-          type="button"
-          class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-        >
-          *Chef note
+          medium-high heat <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['easiest_if_you_sear_the_Chuck_Roast_in_2_separate_batches!']">
         </button>
-        easiest if you sear the Chuck Roast in 2 separate batches
         </p>
         <br />
         <p>
@@ -61,13 +56,8 @@
       <h3>Prepare the Marinade:</h3>
       <article class="indent-5">
         <p>
-          1. Rinse, stem, and seed the Guajillo, Ancho, and Árbol chiles, and add them to a medium-sized pot <button
-          type="button"
-          class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-        >
-          *Chef note
+          1. Rinse, stem, and seed the Guajillo, Ancho, and Árbol chiles, and add them to a medium-sized pot <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Do_this_with_gloves_on,_and_do_not_touch_your_face_or_eyes_during_this_step._Discard_gloves_after_this_step!']">
         </button>
-        do this with gloves on, and do not touch your face or eyes during this step. Discard gloves after this step.
         </p>
         <br />
         <p>
@@ -90,13 +80,8 @@
          </p>
          <br />
          <p>
-           7. fter 10min, using a slotted spoon, transfer the ingredients to a blender or food processor (SAVE THE WATER!) <button
-          type="button"
-          class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-        >
-          *Chef note
+           7. fter 10min, using a slotted spoon, transfer the ingredients to a blender or food processor (SAVE THE WATER!) <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['easiest_to_do_in_multiple_batches_depending_on_blender_or_food_processor_size']">
         </button>
-          easiest to do in multiple batches depending on blender or food processor size
          </p>
          <br />
          <p> 
@@ -133,13 +118,8 @@
     <br />
     <section section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
       <p>
-        Serve as a stew with cilantro and white onions, or in tacos, burritos, etc. <button
-        type="button"
-        class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-      >
-        *Chef note
+        Serve as a stew with cilantro and white onions, or in tacos, burritos, etc. <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['For_INCREDIBLE_fusion,_make_ramen_with_the_Birria_stew_and_serve_with_the_shredded_Birria_Chuck_Roast_and_cilantro/onions....']">
       </button>
-      For INCREDIBLE fusion, make ramen with the Birria stew and serve with the shredded Birria Chuck Roast and cilantro/onions....
       </p>
     </section>
 
