--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -46,23 +46,13 @@
           </p>
           <br />
           <p>
-            4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min <button
-            type="button"
-            class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-          >
-            *Chef note
+            4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_Cauliflower_at_20_min,_if_it_is_not_golden_brown_and_tender,_roast_for_another_5_min']">
           </button>
-          check Cauliflower at 20min, if it is not golden brown and tender, roast for another 5min
           </p>
           <br />
           <p>
-            5. Remove from the Oven, prepare the tacos, and serve as fresh as possible <button
-            type="button"
-            class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-          >
-            *Chef note
+            5. Remove from the Oven, prepare the tacos, and serve as fresh as possible <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Prepare_the_taco_components_before_the_Cauliflower_is_done_roasting_so_you_can_build_the_tacos_and_serve_immediately']">
           </button>
-          Prepare the taco components before the Cauliflower is done roasting so you can build the tacos and serve immediately
           </p>
         </article>
         </section>
@@ -75,13 +65,10 @@
             </p>  
             <br />
             <p>
-              2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min <button
-              type="button"
-              class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-            >
-              *Chef note
+              2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_at_8min_to_see_if_the_Almonds_are_dark_and_starting_to_split;_if_not_continue_roasting-for_2-4_more_minutes_-_do_not_let_the_Almonds_burn']">
+
             </button>
-            Check at 8min to see if the Almonds are dark and starting to split; if not continue roasting for 2-4 more minutes - do not let the Almonds burn
+            
             </p>
             <br />
             <p>
@@ -118,13 +105,9 @@
               </p>
               <br />
               <p>
-                3. Rinse and very thinly slice the Red Cabbage <button
-                type="button"
-                class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center"
-              >
-                *Chef note
+                3. Rinse and very thinly slice the Red Cabbage <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Also_very_good_if_it_is_cold_from_the_refrigerator_at_time_of_plating']">
               </button>
-              Also very good if it is cold from the refrigerator at time of plating
+             
               </p>
               <br />
               <p>
