--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
       type="image/png"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-    />
+    <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="./assets/js/homepage.js"></script>
   </head>
   <body class="homepage-bg relative">
@@ -24,7 +21,6 @@
       >
         Menu
       </button>
-      <!-- TODO: Add light/dark mode toggle on top right -->
     </header>
     <div id="menuContainer"></div>
     <main>
@@ -40,5 +36,13 @@
         />
       </div>
     </main>
+    <footer>
+      <button
+        id="themeButton"
+        class="absolute bottom-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+      >
+        ◑ Theme
+      </button>
+    </footer>
   </body>
 </html>
