--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,6 @@
 <div
   id="menu"
-  class="fixed top-0 left-0 h-full w-80 bg-white text-gray-900 transform -translate-x-full transition-transform z-10 flex flex-col"
+  class="fixed top-0 left-0 h-full w-80 bg-white transform -translate-x-full transition-transform z-10 flex flex-col"
 >
   <ul class="flex-grow p-2 text-3xl">
     <li class="block pl-3 pt-4 text-gray-500 text-lg">Select a Recipe...</li>
