--- a/recipe-AlPastor.html
+++ b/recipe-AlPastor.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
     />
+    <script defer src="./assets/js/script.js"></script>
     <script defer src="./assets/js/homepage.js"></script>
   </head>
   <body class="alPastor-bg relative">
@@ -46,73 +47,73 @@
         class="m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
       >
         <h2>Ingredients:</h2>
-        <ul>
+        <ul class="ingredientsList">
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             3lbs Pork Shoulder (or Pork Butt) in 1/4" Slices
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1 Pineapple
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1 Yellow Onion
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1 Tablespoon Olive Oil
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1 Cup Chicken Stock
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             4 Garlic Cloves
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             5 Guajillo Chiles
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             2 Bay Leaves
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1/4 Cup Apple Cider Vinegar
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             2 Chipotle Chiles in Adobo Sauce
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1 Tablespoon Achiote Paste
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1 Tablespoon Kosher Salt
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1 Teaspoon Cumin
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1 Teaspoon Mexican Oregano
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1/2 Teaspoon Black Pepper
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1/2 Teaspoon All Spice
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />
+            <input type="checkbox" class="ingredient-checkbox mr-2" />
             1/4 Cup Canned Pineapple Juice
           </li>
         </ul>
@@ -121,7 +122,10 @@
       <section
         class="flex-grow m-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
       >
-        <button class="m-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded">
+        <button
+          id="generateShoppingList"
+          class="m-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded"
+        >
           Generate Shopping List</button
         ><a
           href="./AlPastor.html"
@@ -129,7 +133,22 @@
         >
           I have everything! Let's Cook!
         </a>
+        <p id="errorMessage" class="text-red-500"></p>
       </section>
+      <div
+      id="shoppingListModal"
+      class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden"
+    >
+      <div class="bg-white rounded-lg p-6 w-1/2">
+        <h2 class="text-2xl font-medium mb-4">Shopping List</h2>
+        <ul id="shoppingList" class="list-disc list-inside"></ul>
+        <button
+          id="closeModal"
+          class="mt-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded"
+        >
+          Shopping Done!  Let's cook!
+        </button>
+      </div>
     </main>
   </body>
 </html>
