updated timers buttons into all cookingPages htmls

--- a/CarneAsada.html
+++ b/CarneAsada.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="cooking.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="./assets/js/homepage.js"></script>
   </head>
   <body class="carneAsada-bg relative">
     <header
@@ -86,7 +87,7 @@
           <br />
           <p>
             4. Mix the meat in the marinade, seal, and let it marinate in the
-            refrigerator for 24 hours.
+            refrigerator for 24 hours. <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
           </p>
           <br />
           <p>5. Flip the meat in the marinade halfway through</p>
@@ -114,7 +115,7 @@
             
           <br/>
           <p>
-            4. Let stand for 10 minutes after removing from the grill and slice against the grain
+            4. Let stand for 10 minutes after removing from the grill and slice against the grain <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
           </p>
           <br/>
           <p>
