--- a/AlPastor.html
+++ b/AlPastor.html
@@ -53,7 +53,7 @@
         </p>
       <br>
         <p>
-          2.Once lightly browned, add the seeded and stemmed guajillo chiles and bay leaves. Saute for 1-2 minutes.
+          2.Once lightly browned, add the seeded and stemmed guajillo chiles and bay leaves. Saute for 1-2 minutes. <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
         </p>
       <br>
         <p>
@@ -61,7 +61,7 @@
         </p>
       <br> 
         <p>
-          4.Cover on low heat for 10 minutes, then turn off heat and let it cool.
+          4.Cover on low heat for 10 minutes, then turn off heat and let it cool. <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
         </p>
       <br> 
         <p>
@@ -77,7 +77,7 @@
       <br> 
         <p>
           7.Mix the Pork slices into the large bowl of marinade until they are coated. 
-          Cover and put back into the refrigerator to marinate for 4-24 hours.
+          Cover and put back into the refrigerator to marinate for 4-24 hours. <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
         </p>
       <br>
       </article>
@@ -100,7 +100,7 @@
       </p>
     <br>
       <p>
-          4.Once cooked fully, remove the Pork from the Grill and let it rest for a minimum of 10 minutes
+          4.Once cooked fully, remove the Pork from the Grill and let it rest for a minimum of 10 minutes <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
       </p>
     <br> 
       <p>
