--- a/BirriaBeef.html
+++ b/BirriaBeef.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="cooking.css"/>
     <link rel="stylesheet" href="./assets/css/style.css"/>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="./assets/js/homepage.js"></script>
   </head>
   <body class="birria-bg relative">
     <header
@@ -76,7 +77,7 @@
          </p>
          <br />
          <p>
-          6. Reduce the heat to low, cover, and let the pot simmer for 10min
+          6. Reduce the heat to low, cover, and let the pot simmer for 10min <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
          </p>
          <br />
          <p>
@@ -107,7 +108,7 @@
           </p>
           <br />
           <p>
-           3. Reduce to low heat, cover, and cook for 3-3 1/2 hours until the Chuck Roast is fall-apart tender
+           3. Reduce to low heat, cover, and cook for 3-3 1/2 hours until the Chuck Roast is fall-apart tender <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
           </p>
           <br />
           <p>
