--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="cooking.css"/>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="./assets/js/homepage.js"></script>
   </head>
 
   <body class="cauliflower-bg relative">
@@ -32,7 +33,7 @@
     <main>
       <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
         <h2> Cook the Cauliflower</h2>
-        <article class="indent-5">
+        <article  class="indent-5">
           <p>
             1. reheat oven to 400 degrees with one rack in the middle position, and one in the bottom position
           </p>  
@@ -45,10 +46,12 @@
             3. Toss Cauliflower in a large bowl with the Cumin, Ancho Chili Powder, Paprika, and Salt.
           </p>
           <br />
-          <p>
-            4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_Cauliflower_at_20_min,_if_it_is_not_golden_brown_and_tender,_roast_for_another_5_min']">
+          <div id="cookingTimer">
+          <p id="cookingTimerDisplay" class="">
+            4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button> <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_Cauliflower_at_20_min,_if_it_is_not_golden_brown_and_tender,_roast_for_another_5_min']">
           </button>
           </p>
+        </div>
           <br />
           <p>
             5. Remove from the Oven, prepare the tacos, and serve as fresh as possible <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Prepare_the_taco_components_before_the_Cauliflower_is_done_roasting_so_you_can_build_the_tacos_and_serve_immediately']">
@@ -65,7 +68,7 @@
             </p>  
             <br />
             <p>
-              2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_at_8min_to_see_if_the_Almonds_are_dark_and_starting_to_split;_if_not_continue_roasting-for_2-4_more_minutes_-_do_not_let_the_Almonds_burn']">
+              2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button> <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_at_8min_to_see_if_the_Almonds_are_dark_and_starting_to_split;_if_not_continue_roasting-for_2-4_more_minutes_-_do_not_let_the_Almonds_burn']">
 
             </button>
             
@@ -130,6 +133,7 @@
               </p>
             </article>
           </section>
+          <script src="./assets/js/cooking.js"></script>
     </main>
 
     
